--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=
+# REACT_APP_BACKEND_URL=http://localhost:5001
+REACT_APP_BACKEND_URL=http://todo-demo-1004.ap-southeast-2.elasticbeanstalk.com
