--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-# REACT_APP_BACKEND_URL=http://localhost:5001
-REACT_APP_BACKEND_URL=http://todo-demo-1004.ap-southeast-2.elasticbeanstalk.com
+REACT_APP_BACKEND_URL=http://localhost:5001
+REACT_APP_BACKEND_PROXY=http://todo-demo-1004.ap-southeast-2.elasticbeanstalk.com/
+
+
