--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_BACKEND_URL=http://localhost:5001
-REACT_APP_BACKEND_PROXY=https://todo-demo-fe.vercel.app
+# REACT_APP_BACKEND_PROXY=https://todo-demo-fe.vercel.app
+REACT_APP_BACKEND_PROXY=https://grand-daifuku-8d7e75.netlify.app
 
 
